bcfg2/Cfg/etc/mercury/templates/iptables/iptables
#This file is initially copied into iptables from /etc/mercury/templates/iptables.

#After being applied to iptables, these rules are then saved in /etc/uptables.rules and
#restored from there upon reboot of the system.

#If you make changes to iptables, those changes are not automatically saved (nor restored 
#upon restart of the system).  This allows you to recover a broken iptables by restarting 
#the system

*filter

#  Allows all loopback
-A INPUT -i lo -j ACCEPT

#  Accepts all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#  Allows all outbound traffic
-A OUTPUT -j ACCEPT

# Allows HTTP and HTTPS connections from anywhere
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
-A INPUT -p tcp --dport 8080 -j ACCEPT

#  Allows SSH connections
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

# Allow ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# log iptables denied calls
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# Reject all other inbound - default deny unless explicitly allowed policy
-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
